# GUILib-isolation-plug

./: CMakeLists.txt  README.md  proxy-event.hpp  proxy-image.hpp  proxy-server  proxy-server.cpp
client/: main.cpp.bak  proxy-event.hpp  proxy-tool.cpp  qrexec-client-vm.c
server/: proxy-image.hpp  proxy-server.cpp  proxy-tool.cpp
